# Playground

flakeguard/: .gitignore  README.md  pyproject.toml  requirements.txt
flakeguard/.github/workflows/: cost-check.yml
flakeguard/dashboard/: app.py
flakeguard/docs/: PRD_BetaNXT_Flakeguard.md
flakeguard/examples/: README.md  analytics_manifest.json  ecommerce_manifest.json  sample_manifest.json
flakeguard/flakeguard/: __init__.py  cli.py  config.py  cost_estimator.py  dag_parser.py  simulator.py  sql_linter.py
flakeguard/flakeguard/rules/: __init__.py  base.py  correctness_rules.py  dbt_rules.py  performance_rules.py  registry.py
flakeguard/tests/: __init__.py  test_cost_estimator.py  test_dag_parser.py  test_rules.py  test_simulator.py  test_sql_linter.py
valentine-greeting/: DEPLOY.md  index.html
